Add main method and fix toFiniteAutomaton method in Grammar class to handle correctly transitions