@@ -15,14 +15,14 @@ public class Grammar
         this.P = P;
     }
 
-    public String generateStrings(String startSymbol, int numStrings){
+    public List<String> generateStrings(String startSymbol, int numStrings){
         Set<String> generatedStrings = new HashSet<>();
         while(generatedStrings.size() < numStrings){
             StringBuilder sb = new StringBuilder();
             generateString(startSymbol, sb);
             generatedStrings.add(sb.toString());
         }
-        return new ArrayList<>(generatedStrings).toString();
+        return new ArrayList<>(generatedStrings);
     }
 
     private void generateString(String symbol, StringBuilder sb) {
@@ -41,31 +41,31 @@ public class Grammar
         }
     }
 
-    public FiniteAutomaton toFiniteAutomaton(){
-        Set<String> states = V_n;
-        Set<String> alphabet= V_t;
+    public FiniteAutomaton toFiniteAutomaton() {
+        Set<String> states = new HashSet<>(V_n);
+        Set<String> alphabet = new HashSet<>(V_t);
         Map<String, Map<String, String>> transitions = new HashMap<>();
 
-        transitions.put("S", Collections.singletonMap("a", "B"));
+        transitions.put("S", Map.of("a", "B"));
 
-        transitions.put("B", new HashMap<String, String>(){{
-                put("b", "S");
-                put("a", "C");
-            }});
+        transitions.put("B", new HashMap<>(Map.of(
+                "b", "S",
+                "a", "C"
+        )));
+        transitions.get("B").put("b", "B"); // B → b (final)
 
-        transitions.put("C", new HashMap<String, String>(){{
-            put("b", "D");
-        }});
+        transitions.put("C", Map.of("b", "D"));
 
-        transitions.put("D", new HashMap<String, String>(){{
-            put("b", "C");
-            put("c", "S");
-        }});
+        transitions.put("D", new HashMap<>(Map.of(
+                "a", "D", // D → a (final)
+                "b", "C",
+                "c", "S"
+        )));
 
-        FiniteAutomaton finiteAutomaton = new FiniteAutomaton(alphabet, states, "S", new HashSet<>(Arrays.asList("B", "D")), transitions);
+        Set<String> finalStates = new HashSet<>();
+        finalStates.add("B"); // B → b
+        finalStates.add("D"); // D → a
 
-        return finiteAutomaton;
+        return new FiniteAutomaton(alphabet, states, "S", finalStates, transitions);
     }
-
-
 }
